# macrdp

./: .gitignore  DOWNPORTING_STRATEGY.md  Makefile  README.md  README_EN.md  SCREENSHOT_DEBUG.md
crates/macrdp-capture/: Cargo.toml
crates/macrdp-capture/examples/: test_capture.rs
crates/macrdp-capture/src/: lib.rs
crates/macrdp-encode/src/: videotoolbox.rs
crates/macrdp-input/: build.rs
crates/macrdp-server/src/: display.rs
docs/zh/: README.md
macrdp-ui/: build-cli.sh
macrdp-ui/src/: App.tsx
macrdp-ui/src-tauri/: Info.plist
macrdp-ui/src-tauri/src/: lib.rs
macrdp-ui/src/components/: MetricsStrip.tsx  PermissionBanner.tsx  PermissionCard.tsx  Sidebar.tsx  StatusBadge.tsx  ThemeToggle.tsx
macrdp-ui/src/pages/: About.tsx  Dashboard.tsx  Logs.tsx  Permissions.tsx  Popover.tsx  Settings.tsx  Statistics.tsx
