[package]
name = "macrdp-capture"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "test_capture"
path = "examples/test_capture.rs"

[dependencies]
anyhow.workspace = true
tracing.workspace = true
bytes.workspace = true
tokio.workspace = true
core-graphics2 = { version = "0.5", default-features = false, features = ["display", "display-stream", "link"] }
core-foundation = "0.10"
core-video = "0.4"
dispatch2 = "0.1"
io-surface = "0.16"
image = "0.24"
